--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(include)
 set(SOURCE_FILES
         src/main.cpp
         src/glad.c
-        )
+        src/DLApplication.cpp include/DLApplication.h)
 
 add_executable(sdl2_glad ${SOURCE_FILES})
 
