--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(SOURCE_FILES
         src/Square.h
         src/Square.cpp
         src/Vector.h
-        )
+        src/DLApplication.cpp)
 
 add_executable(sdl2_glad ${SOURCE_FILES})
 
